src/styles/global.css
@import "tailwindcss";

@font-face {
  font-family: 'PlusJakartaSans';
  src: url('/fonts/PlusJakartaSans-400.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PlusJakartaSans';
  src: url('/fonts/PlusJakartaSans-500.woff2') format('woff2');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PlusJakartaSans';
  src: url('/fonts/PlusJakartaSans-600.woff2') format('woff2');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PlusJakartaSans';
  src: url('/fonts/PlusJakartaSans-700.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

.marquee-container {
    overflow: hidden;
    width: 100%; /* Atau sesuaikan dengan kebutuhan */
    
    /* Efek Faded menggunakan Linear Gradient */
    -webkit-mask-image: linear-gradient(
        to right,
        transparent,
        black 10%,
        black 90%,
        transparent
    );
    mask-image: linear-gradient(
        to right,
        transparent,
        black 10%,
        black 90%,
        transparent
    );
}
.marquee-track {
    width: max-content;
    animation: marquee 25s linear infinite;
}
.marquee-track:hover {
    animation-play-state: paused;
    cursor: pointer;
}

@keyframes marquee {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(-50%);
    }
}

